Fix grid spacing

--- a/app/static/css/chatroom.css
+++ b/app/static/css/chatroom.css
@@ -10,10 +10,8 @@
 .nav-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(4rem, 1fr));
-  overflow-x: hidden;
-  overflow-y: scroll;
-  padding: 2rem;
-  gap: 1rem;
+  gap: 1.5rem;
+  padding: 1.5rem;
 }
 
 .nav-item-container {
